more experiments. produce a shitload of plots so id suggest not running it for now lol

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -549,8 +549,34 @@
     "    random.seed(seed)\n",
     "    np.random.seed(seed)\n",
     "\n",
+    "\n",
+    "def initial_nodes(G, k, strategy='rand'):\n",
+    "    if strategy == 'rand':\n",
+    "        return np.random.choice(G.nodes(), k, replace=False).tolist()\n",
+    "    elif strategy == 'high_deg':\n",
+    "        degree_dict = dict(G.degree())\n",
+    "        sorted_nodes = sorted(degree_dict, key=degree_dict.get, reverse=True)\n",
+    "        return sorted_nodes[:k]\n",
+    "    elif strategy == 'eigen':\n",
+    "        ev_centrality = nx.eigenvector_centrality_numpy(G)\n",
+    "        sorted_nodes = sorted(ev_centrality, key=ev_centrality.get, reverse=True)\n",
+    "        return sorted_nodes[:k]\n",
+    "    elif strategy == 'cluster':\n",
+    "        node = np.random.choice(G.nodes())\n",
+    "        neighbors = list(G.neighbors(node))\n",
+    "        choice = [node] + neighbors[:max(0, k - 1)]\n",
+    "        if len(choice) < k:\n",
+    "            oth = list(set(G.nodes()) - set(choice))\n",
+    "            choice += list(np.random.choice(oth, k - len(choice), replace=False))\n",
+    "        return choice\n",
+    "    else:\n",
+    "        raise ValueError(\"??\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
     "# Run and get results:\n",
-    "def run_single_sir(G, beta, gamma, frac_infected, max_iter, seed):\n",
+    "def run_single_sir(G, beta, gamma, infected_nodes, max_iter, seed):\n",
     "    set_all_seeds(seed) # keeping same\n",
     "\n",
     "    # build\n",
@@ -558,7 +584,7 @@
     "    config = mc.Configuration()\n",
     "    config.add_model_parameter('beta', beta)\n",
     "    config.add_model_parameter('gamma', gamma)\n",
-    "    config.add_model_parameter('fraction_infected', frac_infected)\n",
+    "    config.add_model_initial_configuration(\"Infected\", infected_nodes)\n",
     "    model.set_initial_status(config)\n",
     "\n",
     "    # get reults\n",
@@ -585,12 +611,13 @@
     "    }\n",
     "\n",
     "# Run ensemble\n",
-    "def ensemble_nx(n_sims, G, beta, gamma, frac_infected, max_iter, seed):\n",
+    "def ensemble_nx(n_sims, G, beta, gamma, k, strategy, max_iter, seed):\n",
     "    series = []\n",
     "    stats_a =[]\n",
     "    for i in range(n_sims):\n",
-    "        seed = seed + i\n",
-    "        _, s = run_single_sir(G, beta=beta, gamma=gamma, frac_infected=frac_infected, max_iter=max_iter, seed=seed)\n",
+    "        init_n = initial_nodes(G, k, strategy=strategy)\n",
+    "    \n",
+    "        _, s = run_single_sir(G, beta, gamma, init_n, max_iter, seed+i)\n",
     "        series.append(s)\n",
     "        stats_a.append(stats_series(s))\n",
     "    \n",
@@ -635,11 +662,13 @@
     "# params\n",
     "\n",
     "betas = [0.02, 0.04, 0.06]\n",
-    "frac_infected_vals = [0.01, 0.05, 0.1]\n",
-    "gamma = 0.05\n",
+    "gammas = [0.02, 0.05]\n",
     "max_iter = 200\n",
     "n_runs = 100\n",
+    "strats = ['rand', 'high_deg', 'eigen', 'cluster']\n",
+    "ks = [1, 5, 10]\n",
     "base = 42\n",
+    "\n",
     "\n",
     "networks = {\n",
     "    'ER': make_er(N=1000, avg_k=10, seed=1),\n",
@@ -650,25 +679,35 @@
     "results = []\n",
     "for name, G in networks.items():\n",
     "    for beta in betas:\n",
-    "        for frac_infected in frac_infected_vals:\n",
-    "            series, stats, summary = ensemble_nx(\n",
-    "                n_sims=n_runs, G=G, beta=beta, gamma=gamma,\n",
-    "                frac_infected=frac_infected, max_iter=max_iter, seed=base\n",
-    "            )\n",
-    "            \n",
-    "            results.append({\n",
-    "                'network': name,\n",
-    "                'beta': beta,\n",
-    "                'frac_infected': frac_infected,\n",
-    "                'peak_I_mean': summary['peak_I'].mean(),\n",
-    "                't_peak_mean': summary['time_to_peak'].mean(),\n",
-    "                'final_R_mean': summary['final_frac_R'].mean()\n",
-    "            })\n",
-    "            \n",
-    "            plot_I_stats(\n",
-    "                stats,\n",
-    "                title=f\"{name} Network, β={beta}, γ={gamma}, I/N={frac_infected}\"\n",
-    "            )\n",
+    "        for gamma in gammas:\n",
+    "            for strat in strats:\n",
+    "                for k in ks:\n",
+    "                    series, stats, summary = ensemble_nx(\n",
+    "                        n_sims=n_runs,\n",
+    "                        G=G,\n",
+    "                        beta=beta,\n",
+    "                        gamma=gamma,\n",
+    "                        k=k,\n",
+    "                        strategy=strat,\n",
+    "                        max_iter=max_iter,\n",
+    "                        seed=base \n",
+    "                    )\n",
+    "                    \n",
+    "                    results.append({\n",
+    "                        'network': name,\n",
+    "                        'beta': beta,\n",
+    "                        'gamma': gamma,\n",
+    "                        'strategy': strat,\n",
+    "                        'init_k': k,\n",
+    "                        'peak_I_mean': summary['peak_I'].mean(),\n",
+    "                        't_peak_mean': summary['time_to_peak'].mean(),\n",
+    "                        'final_R_mean': summary['final_frac_R'].mean()\n",
+    "                    })\n",
+    "                    \n",
+    "                    plot_I_stats(\n",
+    "                        stats,\n",
+    "                        title=f\"{name} Network, β={beta}, γ={gamma}, init_strategy={strat}, k={k}\"\n",
+    "                    )\n",
     "\n",
     "# combine\n",
     "results_df = pd.DataFrame(results)\n",
