load data and convert to unweighted graph

--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -713,6 +713,29 @@
     "results_df = pd.DataFrame(results)\n",
     "display(results_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "627466eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 374 nodes and 1265 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read in the data\n",
+    "df = pd.read_csv(\"transmission_network.csv\", sep=\";\")\n",
+    "A = df.drop(columns=[\"Unnamed: 0\"]).to_numpy(dtype=float)\n",
+    "A[A > 0] = 1 # hope i converted correctly??\n",
+    "G = nx.from_numpy_array(A)\n",
+    "print(G)"
+   ]
   }
  ],
  "metadata": {
